TWINS-424: Replace `Map.of()` with `Collections.emptyMap()` for improved null-safety and consistency across controllers.